fixed spacing issue where header was hiding form

--- a/src/components/Story/Stories.css
+++ b/src/components/Story/Stories.css
@@ -1,5 +1,9 @@
+.form-container {
+  padding-top: 3.5%;
+}
+
 .cards-container {
-  margin-top: 15%;
+  padding-top: 18%;
   width: 100%;
   display: flex;
   flex-direction: row;
